--- a/app/index.html
+++ b/app/index.html
@@ -9,51 +9,61 @@
 	<link rel="stylesheet" href="/app/prd/styles/app.css">
 </head>
 <body>
-   <!--demo1-->
-   <!-- <div ng-controller="democon">
-      <p>{{user[0].user}}--{{user[0].email}}</p>
-      <p ng-bind="user[1].user"></p>
-   </div> -->
-   <!--demo2-->
-  <!--  <div ng-controller="democon">
-     <ul>
-        <li ng-repeat="item in user">
-           <b>用户名{{$index+1}}：{{item.user}}</b> - 
-           <span>邮箱{{$index+1}}：{{item.email}}</span>
-        </li>
-     </ul>
-     <div ng-show="isShow">是否显示?</div>
-     <div ng-hide="isShow">是否隐藏</div>
-     <div ng-if="isShow">通过ng-if来显示和隐藏</div>
-  </div> -->
-   <!--demo3-->
-<!--    <div ng-controller="democon">
-    <input type="text" ng-model="counter">
-    <input type="button" value="+" ng-click="add()">
-</div> -->
-   <!--demo4-->
-  <!--  <div ng-controller="democon">
-      <label>
-         请输入您感兴趣的课程：
-         <input type="text" ng-model="item" ng-keyup="addItem($event)">
-      </label>
-      <ul>
-         <li ng-repeat="item in items track by item">
-            {{item}}
-         </li>
-      </ul>
-  </div> -->
-   <!--demo5-->
-   <div ng-controller="democon">
-       <p>{{price | currency:"￥"}}</p>
-       <ul>
-          <li ng-repeat="book in books | limitTo:limit | orderBy:'-updated'">
-             <p>书名：{{book.name | uppercase}}</p>
-             <p>更新时间：{{book.updated | date:"yyyy年MM月dd日 HH:mm"}}</p>
-          </li>
-       </ul>
+   <div ng-controller="myController" class="search">
+      <!--  <p>
+          <input type="text" ng-model="searchText">
+      </p>
+      <table border="0">
+          <thead>
+              <tr>
+                 <td>ID</td>
+                 <td>Name</td>
+                 <td>Phone</td>
+              </tr>
+          </thead>
+          <tbody>
+              <tr ng-repeat="f in friends | filter:search:value">
+                 <td>{{$index+1}}</td>
+                 <td>{{f.name}}</td>
+                 <td>{{f.phone}}</td>
+              </tr>
+          </tbody>
+      </table> -->
+      <table border="0">
+          <thead>
+              <tr>
+                 <td>ID</td>
+                 <td ng-click="setSort('name')">
+                    Name
+                    <span ng-class="getClass('name')"></span>
+                 </td>
+                 <td ng-click="setSort('sex')">
+                    Sex
+                    <span ng-class="getClass('sex')"></span>
+                  </td>
+                 <td ng-click="setSort('salary')">
+                    Salarys
+                    <span ng-class="getClass('salary')"></span>
+                  </td>
+                 <td ng-click="setSort('birthday')">
+                    Birthday
+                    <span ng-class="getClass('birthday')"></span>
+                 </td>
+              </tr>
+          </thead>
+          <tbody>
+              <tr ng-repeat="user in userInfo | orderBy:sortColumn:reverseSort">
+                 <td>{{$index+1}}</td>
+                 <td>{{user.name}}</td>
+                 <td>{{user.sex}}</td>
+                 <td>{{user.salary | currency:"￥"}}</td>
+                 <td>{{user.birthday | date:"yyyy-MM-dd"}}</td>
+              </tr>
+          </tbody>
+      </table>
    </div>
    <script src="/app/libs/angular.min.js"></script>
+   <script src="/app/libs/jquery-1.11.0.min.js"></script>
    <script src="/app/prd/scripts/app.js"></script>
 </body>
 </html>
