--- a/app/index.html
+++ b/app/index.html
@@ -9,61 +9,46 @@
 	<link rel="stylesheet" href="/app/prd/styles/app.css">
 </head>
 <body>
-   <div ng-controller="myController" class="search">
-      <!--  <p>
-          <input type="text" ng-model="searchText">
-      </p>
-      <table border="0">
-          <thead>
-              <tr>
-                 <td>ID</td>
-                 <td>Name</td>
-                 <td>Phone</td>
-              </tr>
-          </thead>
-          <tbody>
-              <tr ng-repeat="f in friends | filter:search:value">
-                 <td>{{$index+1}}</td>
-                 <td>{{f.name}}</td>
-                 <td>{{f.phone}}</td>
-              </tr>
-          </tbody>
-      </table> -->
-      <table border="0">
-          <thead>
-              <tr>
-                 <td>ID</td>
-                 <td ng-click="setSort('name')">
-                    Name
-                    <span ng-class="getClass('name')"></span>
-                 </td>
-                 <td ng-click="setSort('sex')">
-                    Sex
-                    <span ng-class="getClass('sex')"></span>
-                  </td>
-                 <td ng-click="setSort('salary')">
-                    Salarys
-                    <span ng-class="getClass('salary')"></span>
-                  </td>
-                 <td ng-click="setSort('birthday')">
-                    Birthday
-                    <span ng-class="getClass('birthday')"></span>
-                 </td>
-              </tr>
-          </thead>
-          <tbody>
-              <tr ng-repeat="user in userInfo | orderBy:sortColumn:reverseSort">
-                 <td>{{$index+1}}</td>
-                 <td>{{user.name}}</td>
-                 <td>{{user.sex}}</td>
-                 <td>{{user.salary | currency:"￥"}}</td>
-                 <td>{{user.birthday | date:"yyyy-MM-dd"}}</td>
-              </tr>
-          </tbody>
-      </table>
+   <div class="main">
+       <div class="top"></div>
+       <div class="content">
+           <div class="right">
+               <div class="container">
+                   <h1>欢迎来到后台管理系统</h1>
+                   <div>
+                      <ui-view></ui-view>
+                   </div>
+               </div>
+           </div>
+           <div class="left">
+               <nav>
+                 <a ui-sref="home">首页</a>
+                 <a ui-sref="product">产品信息列表</a>
+               </nav>
+              <!--  <div ng-controller="countryController" style="padding-left:30px">
+                  $parent是对父控制器的引用
+                  {{name}}
+                  <div ng-controller="provinceController">
+                      {{$parent.name}}-{{name}}
+                      <div ng-controller="cityController">
+                          {{$parent.$parent.name}}-{{$parent.name}}-{{name}}
+                      </div>
+                  </div>
+              </div> -->
+              <!--  <div ng-controller="countryController as country" style="padding-left:30px">
+                  {{country.name}}
+                  <div ng-controller="provinceController as province">
+                      {{country.name}}-{{province.name}}
+                      <div ng-controller="cityController as city">
+                          {{country.name}}-{{province.name}}-{{city.name}}
+                      </div>
+                  </div>
+              </div> -->
+           </div> 
+       </div>
    </div>
    <script src="/app/libs/angular.min.js"></script>
-   <script src="/app/libs/jquery-1.11.0.min.js"></script>
-   <script src="/app/prd/scripts/app.js"></script>
+   <script src="/app/libs/angular-ui-router.js"></script>
+   <script src="/app/src/scripts/demos/demo2.js"></script>
 </body>
 </html>
