--- a/app/index.html
+++ b/app/index.html
@@ -1,54 +1,31 @@
 <!doctype html>
-<html lang="en" ng-app="myApp">
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-	<meta name="format-detection" content="telephone=no">
-	<link rel="stylesheet" href="/app/prd/styles/app.css">
+	<script src="app/libs/angular.min.js"></script>
 </head>
-<body>
-   <div class="main">
-       <div class="top"></div>
-       <div class="content">
-           <div class="right">
-               <div class="container">
-                   <h1>欢迎来到后台管理系统</h1>
-                   <div>
-                      <ui-view></ui-view>
-                   </div>
-               </div>
-           </div>
-           <div class="left">
-               <nav>
-                 <a ui-sref="home">首页</a>
-                 <a ui-sref="product">产品信息列表</a>
-               </nav>
-              <!--  <div ng-controller="countryController" style="padding-left:30px">
-                  $parent是对父控制器的引用
-                  {{name}}
-                  <div ng-controller="provinceController">
-                      {{$parent.name}}-{{name}}
-                      <div ng-controller="cityController">
-                          {{$parent.$parent.name}}-{{$parent.name}}-{{name}}
-                      </div>
-                  </div>
-              </div> -->
-              <!--  <div ng-controller="countryController as country" style="padding-left:30px">
-                  {{country.name}}
-                  <div ng-controller="provinceController as province">
-                      {{country.name}}-{{province.name}}
-                      <div ng-controller="cityController as city">
-                          {{country.name}}-{{province.name}}-{{city.name}}
-                      </div>
-                  </div>
-              </div> -->
-           </div> 
-       </div>
-   </div>
-   <script src="/app/libs/angular.min.js"></script>
-   <script src="/app/libs/angular-ui-router.js"></script>
-   <script src="/app/src/scripts/demos/demo2.js"></script>
+<body ng-app="app" ng-controller="mycontroll">
+	<div>
+		<input type="text" ng-model="name" />
+		<p>{{name}} Angular!</p>
+	</div>
+
+	<script type="text/javascript">
+		var app = angular.module("app",[]);
+		app.controller("mycontroll",function($scope){
+			$scope.name ="Tom";
+		})
+
+		var a;
+		function fun(){
+			var i =1;
+			a = i;
+			return i;
+		}
+
+		console.log(fun());
+		console.log(a);
+	</script>
 </body>
 </html>
