--- a/store/tpls/product.html
+++ b/store/tpls/product.html
@@ -1,5 +1,6 @@
 ﻿<p class="text-info">
-    <img alt=""/>
+    <img ng-src="./img/products/{{product.sku}}.jpg"/>
+    {{product.name}}:{{product.description}}
     <br />
 </p>
 
