--- a/store/index.html
+++ b/store/index.html
@@ -24,6 +24,8 @@
 
   <script src="./js/views/storeServ.js"></script>
   <script src="./js/views/storeCtrl.js"></script>
+  <script src="./js/views/cartCtrl.js"></script>
+  <script src="./js/views/servCart.js"></script>
 
   <script src="./js/app.js"></script>
 </head>
